[workspace]
resolver = "2"
members = ["audio_analyzer_app", "audio_analyzer_core", "egui_editable_num"]
default-members = ["audio_analyzer_app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["oligami <nziq53@gmail.com> (https://github.com/oligamiq)"]
license = "MIT/Apache-2.0"

[workspace.dependencies]
audio_analyzer_core = { path = "audio_analyzer_core" }
color-eyre = "0.6.3"
ndarray = { version = "0.16.1", features = ["serde"] }
num-complex = { version = "0.4.6", features = ["serde"]}
log = { version = "0.4.22", features = ["std"] }
mel_spec = { git = "https://github.com/oligamiq/mel-spec" }
egui = { version = "0.29.1", features = [] }
egui_editable_num = { path = "egui_editable_num" }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
egui-plotter = { git = "https://github.com/oligamiq/egui-plotter.git", branch = "allow_feathering"}

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
