[workspace]
resolver = "2"
members = ["audio_analyzer_app", "audio_analyzer_core", "bench_data", "egui_editable_num"]
default-members = ["audio_analyzer_app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["oligami <nziq53@gmail.com> (https://github.com/oligamiq)"]
license = "MIT/Apache-2.0"

[workspace.dependencies]
audio_analyzer_core = { path = "audio_analyzer_core" }
ndarray = { version = "0.16.1", features = ["serde"] }
num-complex = { version = "0.4.6", features = ["serde"]}
log = { version = "0.4.22", features = ["std"] }
mel_spec = { git = "https://github.com/oligamiq/mel-spec" }
egui = { version = "0.30.0", features = ["accesskit", "log", "persistence"] }
egui_editable_num = { path = "egui_editable_num" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fasteval3 = "3.0"
plotters = "0.3.7"
anyhow = "1.0"

[patch.crates-io]
egui-plotter = { git = "https://github.com/oligamiq/egui-plotter.git", branch = "allow_feathering" }
egui_tracing = { git = "https://github.com/oligamiq/egui_tracing" }
egui-snarl = { git = "https://github.com/oligamiq/egui-snarl" }

[profile.dev]
# codegen-backend = "cranelift"
opt-level = 1
incremental = true

[profile.release]
opt-level = 3 # fast and small wasm
codegen-units = 1
lto = "fat" # "thin" is faster to compile, but produces larger binaries

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
# codegen-backend = "llvm"
# incremental = false
opt-level = 3
