[package]
name = "audio_analyzer_app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "audio_analyzer_app"
path = "main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
# graphing and plotting
# plotters = "0.3.7"

# locad music file

# debugging

# log
egui_tracing = { version = "0.2.6", features = ["wasmbind", "reexport"] }

# low memory usage
# compact_str = "0.8.0"
# parking_lot = "0.12.3"
# smallvec = "1.13.2"
hound = "3.5.1"

# patch
# image = { version = "*", default-features = false }
# heapless = "0.8.0"
# const_struct = "0.5.3"
# typenum = "1.17.0"

# others
# https://ratatui.rs/recipes/apps/color-eyre/
egui.workspace = true
eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "wgpu", "persistence", "accesskit"] }
# eframe = { version = "0.29.1", default-features = false, features = ["default_fonts", "glow", "persistence", "accesskit"] }

egui-plotter = "0.3.0"
plotters = "0.3.7"
tracing-core = "0.1.32"
egui-snarl = { version = "0.5.0", features = ["serde", "egui-probe"] }
getrandom = { version = "*", features = ["js"] }
num-traits = "0.2"
audio_analyzer_core.workspace = true

ndarray.workspace = true
num-complex.workspace = true
log.workspace = true
mel_spec.workspace = true
color-eyre.workspace = true

egui_editable_num.workspace = true
serde.workspace = true
serde_json.workspace = true

fasteval3.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
# to access the DOM (to hide the loading text)
web-sys = "0.3.72"
console_error_panic_hook = "0.1.7"
