[package]
name = "audio_analyzer_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "audio_analyzer_core"
path = "lib.rs"

[dependencies]
cpal = { version = "0.15", features = ["wasm-bindgen"] }

# locad music file
symphonia = { version = "0.5.4", default-features = false, features = ["all-formats", "all-codecs", "mpa", "opt-simd", "all"] }

# log
# utils
# directories = "5.0.1"
# predicates = "3.1.0"
# number_prefix = "0.4.0"
# crossbeam-channel = "0.5.13"

# low memory usage
# compact_str = "0.8.0"
parking_lot = "0.12.3"
# smallvec = "1.13.2"
# hound = "3.5.1"

ndarray.workspace = true
num-complex.workspace = true
log.workspace = true
mel_spec.workspace = true
anyhow.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
# to access the DOM (to hide the loading text)
web-sys = { version = "0.3.72", features = [
  "AudioContext",
  "MediaDevices",
  "MediaStreamConstraints",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "BaseAudioContext",
  "MessagePort",
  "MediaStreamAudioDestinationNode",
  "MessageEvent",
  "console",
  "Url",
  "BlobPropertyBag",
  "Blob"
  ] }
js-sys = { version = "0.3" }
# wasm_thread = "0.3.0"
