[package]
name = "audio_analyzer_inner_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
rayon = "1.10.0"
audio_analyzer_core.workspace = true
walkdir = "2.5.0"
pbr = "1.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }
serde_json = "1.0.135"

rustfft = "*"
num-complex = "*"
ndarray = "*"
linear-predictive-coding = "0.2.2"
gxhash = "3.4.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
parking_lot = "0.12.3"
json5 = "0.4.1"
