[package]
name = "audio_analyzer_inner_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
rayon = "1.10.0"
audio_analyzer_core.workspace = true
walkdir = "2.5.0"
pbr = "1.1"
dashmap = { version = "6.1.0", features = ["serde", "rayon", "inline"] }
serde_json = "1.0.135"

rustfft = "*"
num-complex = "*"
ndarray = "*"
linear-predictive-coding = "0.3.1"
gxhash = "3.4.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
parking_lot = "0.12.3"
brotli = "7.0.0"
serde.workspace = true
alloc-no-stdlib = "2.0.4"
num_cpus = "1.16.0"
snap = "1.1.1"
bincode = "1.3.3"
si-scale = "0.2.3"
convert_case = "0.6.0"
