[package]
name = "egui_editable_num"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
egui.workspace = true
serde.workspace = true
rfd = "0.15"

[lib]
name = "egui_editable_num"
path = "lib.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
