[package]
name = "reqwest-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
anyhow = "1"
wasm-bindgen-futures = "0.4"
lib = { path = "../rocket-webapi/lib" }
pollster = "0.4"
serde_json = "1.0"

[[bin]]
name = "reqwest-client"
path = "main.rs"
