[package]
name = "reqwest-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
lib = { path = "../rocket-webapi/lib" }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.12", features = ["json"] }

[[bin]]
name = "reqwest-client"
path = "main.rs"
